Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9415

lfsck_load_one_trace_file() is too noisy

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      Every time I mount an MDT I see the following on the console:

      [941243.931146] LustreError: 23963:0:(lfsck_lib.c:2679:lfsck_load_one_trace_file()) lustre-MDT0000-osd: unlink lfsck sub trace file lfsck_namespace_00: rc = 0
      

      this CERROR() should only be used in the error case.

            wc-triage WC Triage
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: