LU-9415 lfsck: quiet noisy console message

Mark LFSCK console startup message D_LFSCK unless it is an error.

Test-Parameters: trivial testlist=sanity-lfsck
Signed-off-by: Andreas Dilger <andreas.dilger@intel.com>
Change-Id: Ia3e8bc1cfbfa8a19c56626feb7e88e4c544ebbe5
Reviewed-on: https://review.whamcloud.com/27059
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>